--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>حاسبة القروض</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="container">
@@ -46,6 +47,20 @@
             </tbody>
         </table>
     </div>
+    
+    <footer>
+        <div class="footer-content">
+            <h2>حول التطبيق</h2>
+            <p>تطبيق حاسبة القروض يساعدك في حساب تفاصيل القروض بما في ذلك القسط الشهري، الفائدة، والرصيد المتبقي.</p>
+            <div class="contact-info">
+                <p><i class="fas fa-envelope"></i> khalilo2y@hotmail.com</p>
+                <p><i class="fas fa-phone"></i> +216 29401131</p>
+                <p><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/khalil-oui" target="_blank">LinkedIn</a></p>
+                <p><i class="fab fa-facebook"></i> <a href="https://www.facebook.com/khalil.oui" target="_blank">Facebook</a></p>
+            </div>
+        </div>
+    </footer>
+    
     <script src="script.js"></script>
 </body>
 </html>
