--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>حاسبة القروض</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap">
+
 </head>
 <body>
     <div class="container">
-        <h1>حاسبة القروض</h1>
+        <h1>محاكي القروض</h1>
         <form id="loanForm">
             <label for="principal">قيمة القرض:</label>
             <input type="number" id="principal" name="principal" required>
@@ -53,10 +55,10 @@
             <h2>حول التطبيق</h2>
             <p>تطبيق حاسبة القروض يساعدك في حساب تفاصيل القروض بما في ذلك القسط الشهري، الفائدة، والرصيد المتبقي.</p>
             <div class="contact-info">
-                <p><i class="fas fa-envelope"></i> khalilo2y@hotmail.com</p>
-                <p><i class="fas fa-phone"></i> +216 29401131</p>
-                <p><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/khalil-oui" target="_blank">LinkedIn</a></p>
-                <p><i class="fab fa-facebook"></i> <a href="https://www.facebook.com/khalil.oui" target="_blank">Facebook</a></p>
+                <p><i class="fas fa-envelope"></i> <a href="mailto:khalilo2y@hotmail.com">khalilo2y@gmail.com</a></p>
+                <p><i class="fas fa-phone"></i> <a href="https://wa.me/21629401131" target="_blank">0021629401131</a></p>
+                <p><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/khalilo2ya/" target="_blank">LinkedIn</a></p>
+                <p><i class="fab fa-facebook"></i> <a href="https://www.facebook.com/profile.php?id=100080065068201" target="_blank">Facebook</a></p>
             </div>
         </div>
     </footer>
