--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>حاسبة القروض</title>
+    <meta name="description" content="تطبيق حاسبة القروض يساعدك في حساب تفاصيل القروض بما في ذلك القسط الشهري، الفائدة، والرصيد المتبقي.">
+    <meta name="keywords" content="حاسبة القروض, قروض, حساب القروض, مالية">
+    <meta name="author" content="Khalil Yahyaoui">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap">
