--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
             <div class="row">
 
-                <div class="col col-sm-6">
+                <div class="col-md-6">
 
                     <label for="years">مدة القرض (السنوات):</label>
                     <input type="number" id="years" name="years" min="0" max="20" value="0" required>
                 </div>
-                <div class="col col-sm-6">
+                <div class="col-md-6">
                     <label for="months">مدة القرض (الأشهر):</label>
                     <input type="number" id="months" name="months" min="0" max="12" value="0" required>
 
@@ -52,10 +52,10 @@
 
         <div id="loanDetails" class="hidden">
             <h2>تفاصيل القرض</h2>
-            <p>مبلغ القرض: <span id="loanAmount"></span> د.ت</p>
-            <p>القسط الشهري: <span id="monthlyPayment"></span> د.ت</p>
-            <p>قيمة الفائدة الإجمالية: <span id="totalInterest"></span> د.ت</p>
-            <p>المبلغ الجملي للسداد: <span id="totalRepayment"></span> د.ت</p>
+            <p>مبلغ القرض: <span id="loanAmount"></span></p>
+            <p>القسط الشهري: <span id="monthlyPayment"></span></p>
+            <p>قيمة الفائدة الإجمالية: <span id="totalInterest"></span></p>
+            <p>المبلغ الجملي للسداد: <span id="totalRepayment"></span></p>
         </div>
 
         <div id="loanTableContainer" class="hidden">
